[package]
name = "wubwub"
version = "0.1.0"
authors = ["Ashley Williams <ashley666ashley@gmail.com>"]

[dependencies]
rand = "0.6"
rocket = "0.4.0-rc.2"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8.7"
sass-rs = "0.2.1"
reqwest = "0.9.5"
toml = "0.4"

[dependencies.rocket_contrib]
version = "0.4.0-rc.2"
default-features = false
features = ["handlebars_templates"]
